calculator-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-microservice
spec:
  type: NodePort
  selector:
    app: my-release
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30000
